--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.js/"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js" integrity="sha512-WzkwpdWEMAY/W8WvP9KS2/VI6zkgejR4/KTxTl4qHx0utqeyVE0JY+S1DlMuxDChC7x0oXtk/ESji6a0lP/Tdg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -19,10 +20,11 @@
   	<h3  class="btn btn-info heading">APP WEB DJ COM IA
 	    <br>
       <img src="ComposedCalmIsabellinewheatear-size_restricted.gif" id="pisca1" >
-	    <span class="nota">OBSERVAÇÃO: Mova seu pulso esquerdo para cima para toca Hit The Road Jack.
+	    <span class="nota">OBSERVAÇÃO: Mova seu pulso esquerdo para cima para toca Hit The Road Jack. <br>
         Mova seu pulso direito para cima para tocar Scatman (ski-ba-bop-ba-dop-bop).</span>
   	</h3>
 	<br><br>
+  <button class="btn btn-primary" id="ndm">Nome da musica</button>
 </center>
 
 <script src="main.js"></script>
