--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         Mova seu pulso direito para cima para tocar Scatman (ski-ba-bop-ba-dop-bop).</span>
   	</h3>
 	<br><br>
-  <button class="btn btn-primary" id="ndm">Nome da musica</button>
+  <button class="btn btn-primary" id="ndm">Nome da musica:</button>
 </center>
 
 <script src="main.js"></script>
